deployment-debug.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: debug
  labels:
    app: debug
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: debug
    spec:
      containers:
        - name: debug
          image: debian
