deployment-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 3306

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: oshou/awesome-music-db:latest
          name: db
          ports:
            - containerPort: 3306
              name: db
