deployment-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: http
      port: 3000
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: front
          image: oshou/awesome-music-front:latest
          ports:
            - containerPort: 3000
