ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-front
spec:
  rules:
  - host: ingress-front
    http:
      paths:
      - path: /*
        backend:
          serviceName: front
          servicePort: 3000
